--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.emelyanov.icerockpractice">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".IceRockApp"
         android:allowBackup="true"
@@ -16,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".modules.core.presentation.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
