--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+kotlin_version = "1.6.21"
+hilt_version = "2.42"
+retrofit_version = "2.9.0" 
+markdown_version = "0.19.0"
